--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>viaversion</artifactId>
             <version>3.1.0</version>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>bungeecord-chat</artifactId>
+                    <groupId>net.md-5</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
